testsuite/poke.pkl/strings-esc-diag-4.pk
/* { dg-do compile } */

/* Invalid octal \-sequence */

var s = "\400"; /* { dg-error "" } */
